--- a/style.css
+++ b/style.css
@@ -1,31 +1,113 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-html,
 body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
+  margin: 40px;
+}
+
+.container {
+  width: 1140px;
+  margin: 0 auto;
 }
 
 #map {
-  width: 640px;
-  height: 480px;
+  width: 100%;
+  height: 300px;
+  margin-top: 20px;
+  /* border: 1px solid darkgray; */
+  border-radius: 5px;
+  overflow: hidden;
 }
 
-.map-visible {
+.border {
+  padding: 20px;
+  border: 1px solid darkgray;
+  border-radius: 5px;
+}
+
+h3 {
+  margin-bottom: 20px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: max-content 1fr max-content;
+  gap: 20px;
+  grid-template-areas:
+    "route calculation"
+    "options calculation"
+    "btn calculation";
+}
+
+.route {
+  grid-area: route;
+}
+
+.route input,
+.options input {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid darkgray;
+  border-radius: 4px;
+}
+
+.options {
+  grid-area: options;
+}
+
+.calculation {
+  grid-area: calculation;
+}
+
+.btn {
+  grid-area: btn;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid darkgray;
+  background: none;
+  outline: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.calculation__item {
+  margin: 20px 0;
+}
+
+.calculation__item .comment {
+  text-align: right;
   display: block;
+  white-space: nowrap;
+  color: gray;
+  font-style: italic;
 }
 
-.map-invisible {
-  display: none;
-}
-
-.inputs {
+.calculation__item div {
   display: flex;
-  flex-direction: column;
-  width: 320px;
+  justify-content: space-between;
+}
+.calculation__item div span:nth-child(1) {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.calculation__item div span:nth-child(2) {
+  font-weight: 600;
+}
+
+.dashed-line {
+  border-bottom: 1px dashed darkgray;
+  margin: 0 5px;
+  flex-grow: 1;
+}
+
+.total {
+  font-size: 20px;
 }
